--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/minhasListas"
         android:layout_width="329dp"
         android:layout_height="318dp"
         android:layout_marginStart="8dp"
