--- a/app/src/main/res/layout/activity_addproduto.xml
+++ b/app/src/main/res/layout/activity_addproduto.xml
@@ -7,7 +7,7 @@
     tools:context=".AddprodutoActivity">
 
     <TextView
-        android:id="@+id/listName"
+        android:id="@+id/addProduto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
