Correção da Tela de Adição produtos, It Works!

--- a/app/src/main/res/layout/activity_addproduto.xml
+++ b/app/src/main/res/layout/activity_addproduto.xml
@@ -7,7 +7,7 @@
     tools:context=".AddprodutoActivity">
 
     <TextView
-        android:id="@+id/addProduto"
+        android:id="@+id/addLista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -57,7 +57,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="number"
-        android:text="Preço"
+        android:text="Preco"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.278"
