Alteração classes, fixed activity Main

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -21,7 +22,7 @@
 
     <ListView
         android:id="@+id/minhasListas"
-        android:layout_width="329dp"
+        android:layout_width="449dp"
         android:layout_height="318dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
